--- a/sales_predictions.ipynb
+++ b/sales_predictions.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/bradshawjoshua/sales-predictions/blob/main/sales_predictions.ipynb",
-      "authorship_tag": "ABX9TyPV6wKUKlF9fK2lnjv5NjBu",
+      "authorship_tag": "ABX9TyPpFCOGFf+G5VK3y8Eu35nZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -986,7 +986,7 @@
         "\n",
         ">Item identifier allows us to make a good judgement call on its item weight based on existing values with the same item identifier.\n",
         "\n",
-        ">Using median, mean, or mode by its item identifier will not have an affect on output, due to equal value for a respective observation"
+        ">Using median, mean, or mode by its item identifier will not have an affect on output, due to equal value for a respective observation."
       ],
       "metadata": {
         "id": "L3iKK7svD2DM"
