--- a/18_Part_2_sales_predictions.ipynb
+++ b/18_Part_2_sales_predictions.ipynb
@@ -38,14 +38,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 601
+          "height": 600
         },
         "id": "BF1mLgsrcp8U",
-        "outputId": "7e21342d-97aa-4488-9b22-bff2c1899db2"
+        "outputId": "abfd7c88-ce0d-4caa-9305-b09dc4c430b2"
       },
       "outputs": [
         {
@@ -102,7 +102,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6dcf1475-d5f9-4cf3-a30b-aeff0cdffa05\">\n",
+              "  <div id=\"df-386ce018-27c3-470a-92e5-fab233f98591\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -290,7 +290,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6dcf1475-d5f9-4cf3-a30b-aeff0cdffa05')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-386ce018-27c3-470a-92e5-fab233f98591')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -341,12 +341,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6dcf1475-d5f9-4cf3-a30b-aeff0cdffa05 button.colab-df-convert');\n",
+              "          document.querySelector('#df-386ce018-27c3-470a-92e5-fab233f98591 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6dcf1475-d5f9-4cf3-a30b-aeff0cdffa05');\n",
+              "          const element = document.querySelector('#df-386ce018-27c3-470a-92e5-fab233f98591');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -404,12 +404,12 @@
       ],
       "metadata": {
         "id": "XcVdMsV9nCqQ",
-        "outputId": "5da8de58-8610-4dd8-dfd5-0a5ab1e47864",
+        "outputId": "323dc6f1-e443-407f-d2f0-98ff1ce20124",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -448,12 +448,12 @@
       ],
       "metadata": {
         "id": "xnYBYnSdn7XK",
-        "outputId": "31fa24c7-87e0-422e-9b3c-de0e79b72ec4",
+        "outputId": "63133b1b-e812-4b12-a338-c891c1132d06",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,12 +507,12 @@
       ],
       "metadata": {
         "id": "hpZ3teVpoymC",
-        "outputId": "de15b764-297f-430e-93c0-04a4463943b5",
+        "outputId": "3470ebf2-3350-4f38-c293-19629b601b72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,12 +544,12 @@
       ],
       "metadata": {
         "id": "2l4-FY2Jo3zz",
-        "outputId": "2f62027e-8f9e-4a9e-fe68-1aa092caee2d",
+        "outputId": "46bf5433-cac6-4bb8-d991-97b4fb99c57d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -588,12 +588,12 @@
       ],
       "metadata": {
         "id": "EfFgcPRCpOyn",
-        "outputId": "b57825e3-dcf5-407c-c70a-e4af4c164966",
+        "outputId": "cfa109b2-aa79-4193-e4a6-a1746a8b95fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,12 +640,12 @@
       ],
       "metadata": {
         "id": "avbdwkkppbSz",
-        "outputId": "9f62f524-eeaa-4323-d784-1eefdd755ed0",
+        "outputId": "6b084392-cdc6-49cb-b17c-d98d0a243ed8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,12 +670,12 @@
       ],
       "metadata": {
         "id": "Aa50WAwNq2uS",
-        "outputId": "4b29026f-3e7a-4736-c51a-65b75c9b7ad9",
+        "outputId": "5ce73e04-fc58-480c-ed97-443cd1a33ebe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,13 +693,13 @@
       ],
       "metadata": {
         "id": "u3ohB7XJuLzO",
-        "outputId": "a178e843-4973-4b31-a21b-1dfcf4666e9a",
+        "outputId": "a819ccd4-f950-4555-f3e7-d71c8880f958",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +727,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-982efaa4-2160-4b67-a6d8-591ff44ba9bb\">\n",
+              "  <div id=\"df-d91538a4-8dd0-4a25-8e4c-c0fef90c91f4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -822,7 +822,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-982efaa4-2160-4b67-a6d8-591ff44ba9bb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d91538a4-8dd0-4a25-8e4c-c0fef90c91f4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -873,12 +873,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-982efaa4-2160-4b67-a6d8-591ff44ba9bb button.colab-df-convert');\n",
+              "          document.querySelector('#df-d91538a4-8dd0-4a25-8e4c-c0fef90c91f4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-982efaa4-2160-4b67-a6d8-591ff44ba9bb');\n",
+              "          const element = document.querySelector('#df-d91538a4-8dd0-4a25-8e4c-c0fef90c91f4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -913,19 +913,19 @@
       ],
       "metadata": {
         "id": "w3McmIK34vOH",
-        "outputId": "976b71e4-9f5b-4680-a3d8-743d29d7dc1d",
+        "outputId": "987b5ced-b958-4cff-d5d6-50a14de42d79",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 773
+          "height": 589
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f8159ba5490>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f21ccc986d0>"
             ]
           },
           "metadata": {},
@@ -973,7 +973,7 @@
       "metadata": {
         "id": "bkqyW8KZ7S2_"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -997,13 +997,13 @@
       ],
       "metadata": {
         "id": "Fwg-LTpJDYJs",
-        "outputId": "ccf369fc-af0d-4419-eac7-1333d7174c0f",
+        "outputId": "ab725355-c780-42c4-b322-cc3f3142a5b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1041,7 +1041,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fef29b54-1f0b-47cc-b5d1-3f72c9a53fc5\">\n",
+              "  <div id=\"df-7e1f2483-6bd4-42f1-8ca8-4482b5d7bf65\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1208,7 +1208,7 @@
               "</table>\n",
               "<p>1559 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fef29b54-1f0b-47cc-b5d1-3f72c9a53fc5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7e1f2483-6bd4-42f1-8ca8-4482b5d7bf65')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1259,12 +1259,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fef29b54-1f0b-47cc-b5d1-3f72c9a53fc5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7e1f2483-6bd4-42f1-8ca8-4482b5d7bf65 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fef29b54-1f0b-47cc-b5d1-3f72c9a53fc5');\n",
+              "          const element = document.querySelector('#df-7e1f2483-6bd4-42f1-8ca8-4482b5d7bf65');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1309,7 +1309,7 @@
       "metadata": {
         "id": "et_yMMqf9chG"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1330,7 +1330,7 @@
       "metadata": {
         "id": "QaBmta9t4H-c"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1352,19 +1352,19 @@
       ],
       "metadata": {
         "id": "VsjbFomOGQp9",
-        "outputId": "00fdc5e3-7018-4cdb-90d2-8d065cfeeb9c",
+        "outputId": "7f151183-bacf-47af-a361-e8cabeb9dbf7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 773
+          "height": 589
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f8156db0710>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f21c9e98110>"
             ]
           },
           "metadata": {},
@@ -1394,9 +1394,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H1q459L4wZig",
-        "outputId": "50abfb10-a67c-4ed0-a4a3-0c06d615d821"
+        "outputId": "399223c6-9d84-4e76-f34f-40463e637228"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1418,7 +1418,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 18
         }
       ]
     },
@@ -1444,7 +1444,7 @@
       "metadata": {
         "id": "CbrY9mwhJb8G"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1456,7 +1456,7 @@
       "metadata": {
         "id": "W8S_pvjLBOyq"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1686,6 +1686,184 @@
           },
           "metadata": {},
           "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_types = df.dtypes\n",
+        "data_types"
+      ],
+      "metadata": {
+        "id": "R5vsAxj-qKY3",
+        "outputId": "d46be3f9-f297-454e-8a60-8e0bfe4ef7de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Item_Identifier               object\n",
+              "Item_Weight                  float64\n",
+              "Item_Fat_Content              object\n",
+              "Item_Visibility              float64\n",
+              "Item_Type                     object\n",
+              "Item_MRP                     float64\n",
+              "Outlet_Identifier             object\n",
+              "Outlet_Establishment_Year      int64\n",
+              "Outlet_Size                   object\n",
+              "Outlet_Location_Type          object\n",
+              "Outlet_Type                   object\n",
+              "Item_Outlet_Sales            float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str_cols = data_types[data_types=='object'].index\n",
+        "str_cols"
+      ],
+      "metadata": {
+        "id": "SHU3AEpppT9u",
+        "outputId": "87f2fa5f-b5fa-49d2-c488-79ab6739244e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Item_Identifier', 'Item_Fat_Content', 'Item_Type', 'Outlet_Identifier',\n",
+              "       'Outlet_Size', 'Outlet_Location_Type', 'Outlet_Type'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for col in str_cols:\n",
+        "  print(f'- {col}:')\n",
+        "  print(df[col].value_counts(dropna=False))\n",
+        "  print('\\n\\n')"
+      ],
+      "metadata": {
+        "id": "SPQkyAhMpR-R",
+        "outputId": "af681821-2cb6-42e7-cb49-9e25b7d8a588",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "- Item_Identifier:\n",
+            "FDW13    10\n",
+            "FDG33    10\n",
+            "NCY18     9\n",
+            "FDD38     9\n",
+            "DRE49     9\n",
+            "         ..\n",
+            "FDY43     1\n",
+            "FDQ60     1\n",
+            "FDO33     1\n",
+            "DRF48     1\n",
+            "FDC23     1\n",
+            "Name: Item_Identifier, Length: 1559, dtype: int64\n",
+            "\n",
+            "\n",
+            "\n",
+            "- Item_Fat_Content:\n",
+            "Low Fat    5517\n",
+            "Regular    3006\n",
+            "Name: Item_Fat_Content, dtype: int64\n",
+            "\n",
+            "\n",
+            "\n",
+            "- Item_Type:\n",
+            "Fruits and Vegetables    1232\n",
+            "Snack Foods              1200\n",
+            "Household                 910\n",
+            "Frozen Foods              856\n",
+            "Dairy                     682\n",
+            "Canned                    649\n",
+            "Baking Goods              648\n",
+            "Health and Hygiene        520\n",
+            "Soft Drinks               445\n",
+            "Meat                      425\n",
+            "Breads                    251\n",
+            "Hard Drinks               214\n",
+            "Others                    169\n",
+            "Starchy Foods             148\n",
+            "Breakfast                 110\n",
+            "Seafood                    64\n",
+            "Name: Item_Type, dtype: int64\n",
+            "\n",
+            "\n",
+            "\n",
+            "- Outlet_Identifier:\n",
+            "OUT027    935\n",
+            "OUT013    932\n",
+            "OUT049    930\n",
+            "OUT046    930\n",
+            "OUT035    930\n",
+            "OUT045    929\n",
+            "OUT018    928\n",
+            "OUT017    926\n",
+            "OUT010    555\n",
+            "OUT019    528\n",
+            "Name: Outlet_Identifier, dtype: int64\n",
+            "\n",
+            "\n",
+            "\n",
+            "- Outlet_Size:\n",
+            "Medium     2793\n",
+            "Missing    2410\n",
+            "Small      2388\n",
+            "High        932\n",
+            "Name: Outlet_Size, dtype: int64\n",
+            "\n",
+            "\n",
+            "\n",
+            "- Outlet_Location_Type:\n",
+            "Tier 3    3350\n",
+            "Tier 2    2785\n",
+            "Tier 1    2388\n",
+            "Name: Outlet_Location_Type, dtype: int64\n",
+            "\n",
+            "\n",
+            "\n",
+            "- Outlet_Type:\n",
+            "Supermarket Type1    5577\n",
+            "Grocery Store        1083\n",
+            "Supermarket Type3     935\n",
+            "Supermarket Type2     928\n",
+            "Name: Outlet_Type, dtype: int64\n",
+            "\n",
+            "\n",
+            "\n"
+          ]
         }
       ]
     }
