--- a/18_Part_2_sales_predictions.ipynb
+++ b/18_Part_2_sales_predictions.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -317,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +457,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +501,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,7 +553,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +583,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +607,7 @@
           "height": 300
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -827,7 +827,7 @@
           "height": 738
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,7 +881,7 @@
       "metadata": {
         "id": "bkqyW8KZ7S2_"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -911,7 +911,7 @@
           "height": 455
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1217,7 +1217,7 @@
       "metadata": {
         "id": "et_yMMqf9chG"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1238,7 +1238,7 @@
       "metadata": {
         "id": "QaBmta9t4H-c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1266,7 +1266,7 @@
           "height": 738
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1304,7 +1304,7 @@
         "id": "H1q459L4wZig",
         "outputId": "0dc9e868-bd8c-46c2-d2b6-46ff1e2c4496"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1352,7 +1352,7 @@
       "metadata": {
         "id": "CbrY9mwhJb8G"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1364,7 +1364,7 @@
       "metadata": {
         "id": "W8S_pvjLBOyq"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1391,7 +1391,7 @@
           "height": 300
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1639,7 +1639,7 @@
         "id": "QXbygCicCUe_",
         "outputId": "b939fa0c-93c5-4e54-8834-b05c92495a56"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1704,7 +1704,7 @@
         "id": "_moyrkmfP3Sj",
         "outputId": "df9a1059-8915-4fbb-a8f6-72b4127b8942"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1756,7 +1756,7 @@
         "id": "ZIucNCaUWzGu",
         "outputId": "da99c463-0b73-4354-abf7-413406715415"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1819,7 +1819,7 @@
           "height": 646
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1848,7 +1848,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The chart above provides a quick dispersion of our outlet sizes. It not only gives us a distribution of outlet sales, but also shows us what type of outlet make up these sizes. As shown, I replaced NaN values within Missing feature, which shows us a visual likeness with Small feature. More analysis will be done to see how we can apply this Missing category to our sales prediction."
+        ">The chart above provides a quick dispersion of our outlet sizes. It not only gives us a distribution of outlet sales, but also shows us what type of outlet make up these sizes."
       ],
       "metadata": {
         "id": "koNCLwX9tra8"
@@ -1884,7 +1884,7 @@
           "height": 646
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1913,7 +1913,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Although this sprinkled chart looks confusing, it's part of the data exploration process. It shows that there are no clear negative or positive correlations for an item's weight and its visibility. My next step would be to split this chart up by its seperate Item Type using a For Loop, just in case we might have missed it with this overall visualization."
+        ">This sprinkled chart shows that there are no clear negative or positive correlations for an item's weight and its visibility by type. Having many item types may cause issues to my machine learning model for predicting sales. In the next section I will remove it from my model for processing purposes."
       ],
       "metadata": {
         "id": "OY39MJqSw-t4"
