--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -1973,7 +1973,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ">This sprinkled chart shows that there are no clear negative or positive correlations for an item's weight and its visibility by type. "
+        ">Scatter plot chart displays that there are no clear negative or positive correlations for an item's weight and its visibility by type. "
       ],
       "metadata": {
         "id": "OY39MJqSw-t4"
