--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -304,7 +304,7 @@
       "metadata": {
         "id": "Rtimc1brBPZA"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -355,7 +355,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +399,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +458,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +539,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +621,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +645,7 @@
           "height": 300
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +865,7 @@
           "height": 691
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +919,7 @@
       "metadata": {
         "id": "bkqyW8KZ7S2_"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -949,7 +949,7 @@
           "height": 455
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1255,7 +1255,7 @@
       "metadata": {
         "id": "et_yMMqf9chG"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1276,7 +1276,7 @@
       "metadata": {
         "id": "QaBmta9t4H-c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1304,7 +1304,7 @@
         },
         "outputId": "587047b6-edf4-4678-c384-c874e91a24ba"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1342,7 +1342,7 @@
         },
         "outputId": "5df24eb4-10f2-463b-8fa8-717399c5060d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1390,7 +1390,7 @@
       "metadata": {
         "id": "CbrY9mwhJb8G"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1401,7 +1401,7 @@
       "metadata": {
         "id": "a38thgdmLtfL"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1413,7 +1413,7 @@
       "metadata": {
         "id": "W8S_pvjLBOyq"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1440,7 +1440,7 @@
         },
         "outputId": "579459ca-2745-48d6-a152-621959b46460"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1688,7 +1688,7 @@
         },
         "outputId": "88a63255-9772-4522-d008-79ccab08bc98"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1753,7 +1753,7 @@
         },
         "outputId": "e498b08d-0446-447a-f30d-57879acfc4ad"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1805,7 +1805,7 @@
         },
         "outputId": "2b213974-e97b-4092-d115-0c81a9a6a5ab"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1868,7 +1868,7 @@
         },
         "outputId": "a54a0875-bfa7-48dc-9f42-8bc14093d91d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1933,7 +1933,7 @@
         },
         "outputId": "2f453325-f9ed-479b-9f75-fcc621651bbd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1967,7 +1967,7 @@
       "metadata": {
         "id": "r5F9_8dEHnPd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1991,7 +1991,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Identifying the features (X) and target (y): Assigning the Item_Outlet_Sales column as the target and the rest of the relevant variables as the features matrix, except Item_Type."
+        "Identifying the features (X) and target (y): Assigning the Item_Outlet_Sales column as the target and the rest of the relevant variables as the features matrix, except Item_Identifier and Outlet_Identifier."
       ],
       "metadata": {
         "id": "HUokBJtBD6Ko"
@@ -2009,7 +2009,7 @@
         },
         "outputId": "4739d20c-dd15-4047-fbdd-ff2f754f6f66"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2049,7 +2049,7 @@
       "metadata": {
         "id": "JPL83HJ2DJO8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2065,7 +2065,7 @@
         },
         "outputId": "c6c5e608-a0d7-4cb8-ffe4-e97a6469e704"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2100,7 +2100,7 @@
       "metadata": {
         "id": "ktLM8K6WCE8k"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2116,7 +2116,7 @@
         },
         "outputId": "6aaa9ac5-1068-4bfe-a29c-2e360e39e0cf"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2143,7 +2143,7 @@
         "id": "mhnKi1tzMH1P",
         "outputId": "4b44f7d9-f41c-4c7a-d0f2-78ff850714b6"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2170,7 +2170,7 @@
       "metadata": {
         "id": "6SOeWx_hNyPa"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2186,7 +2186,7 @@
         "id": "dRxFJm95MkUs",
         "outputId": "83753d4b-e708-430a-f5bc-edae613994de"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2233,7 +2233,7 @@
         },
         "outputId": "36ca5312-f09c-4a72-cd77-f0c85979c5ce"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2257,7 +2257,7 @@
       "metadata": {
         "id": "KEeGu3uDEsHT"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2275,7 +2275,7 @@
       "metadata": {
         "id": "yfOMEXE5EytA"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2293,7 +2293,7 @@
         },
         "outputId": "7ae1027b-68a5-4b3f-edbc-554c1c714483"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2328,7 +2328,7 @@
         },
         "outputId": "ba695e56-60ba-4eff-b32b-7aef948c8926"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2375,7 +2375,7 @@
         },
         "outputId": "ec24f628-cb9c-4f2b-f8f6-843255d6d94e"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2436,7 +2436,7 @@
         },
         "outputId": "9d50596e-161e-4dfe-99e7-50eaf04e936b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2493,7 +2493,7 @@
       "metadata": {
         "id": "2ZCkvG2NGI-c"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2517,7 +2517,7 @@
         },
         "outputId": "69ddcd59-31b2-4dad-c6eb-7265200786a6"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
